@@ -18,6 +18,7 @@ Direct3D 10
 Direct3D 11
 	* Added a Factory property to the Device to make it easy to get the associated factory.
 	* Fixed a stack overflow in Resource.FromPointer.
+	* Changed BlendStateDescription to implement IEquatable<T> and GetHashCode()
 
 Multimedia
 	* Extended the WaveStream class to support ADPCM formats.
